# 29.3_storytelling_casestudy

./: Makefile  README.md  environment.yml  pyproject.toml
29.3_storytelling_casestudy/: __init__.py  dataset.py  features.py  plots.py
29.3_storytelling_casestudy/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 29.3_ApplyStoryTelling_BenoitLoze.pptx  29.3_ApplyStoryTelling_UKeconomics_BenoitLoze.pptx  29.3_StoryTelling_CaseStudy.ipynb
